--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ plugins {
 }
 
 
-version = '1.1'
+version = '1.2'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
@@ -103,7 +103,7 @@ task cloneRepositoryBranch{
 
 
 
-task commitRepositoryBranch(){c
+task commitRepositoryBranch(){
     doLast{
         exec{
             workingDir "$buildDir/repo"
@@ -165,7 +165,7 @@ dependencies {
     testCompile("org.junit.platform:junit-platform-runner:1.0.0-M4")
     
     compile group: 'net.automatalib.distribution', name: 'automata-distribution', version: '0.9.0'
-
+    compile 'de.learnlib.distribution:learnlib-distribution:0.15.0'
 }
 
 generateGrammarSource {
