--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
 			<version>4.7.1</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.jbellis</groupId>
+			<artifactId>jamm</artifactId>
+			<version>0.3.3</version>
+		</dependency>
+		<dependency>
 			<groupId>net.automatalib.distribution</groupId>
 			<artifactId>automata-distribution</artifactId>
 			<version>0.9.0</version>
@@ -69,7 +74,12 @@
 					<archive>
 						<manifest>
 							<mainClass>net.alagris.CLI</mainClass>
+							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
 						</manifest>
+						<manifestEntries>
+							<Premain-Class>org.github.jamm.MemoryMeter</Premain-Class>
+						</manifestEntries>
 					</archive>
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
