--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 	<description>Transducer regular expression compiler</description>
 	<developers>
 		<developer>
-			<id>aleksanderm</id>
+			<id>aleksander</id>
 			<name>Aleksander Mendoza</name>
 			<email>aleksander.mendoza.drosik@gmail.com</email>
 		</developer>
