--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
 	</developers>
 	<dependencies>
 		<dependency>
+			<groupId>jline</groupId>
+			<artifactId>jline</artifactId>
+			<version>2.14.2</version>
+		</dependency>
+		<dependency>
 			<groupId>org.junit.platform</groupId>
 			<artifactId>junit-platform-commons</artifactId>
 			<version>1.5.2</version>
