--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,106 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>solomonoff</groupId>
 	<artifactId>solomonoff</artifactId>
-	<version>2.5</version>
+	<version>2.6</version>
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<jline.version>3.19.0</jline.version>
 	</properties>
+
+	<profiles>
+		<profile>
+			<id>library</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>2.3.2</version>
+						<configuration>
+							<excludes>
+								<exclude>**/net/alagris/cli/*</exclude>
+							</excludes>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>repl</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<repositories>
+				<repository>
+					<id>jline</id>
+					<url>https://repo1.maven.org/maven2/org/jline/</url>
+				</repository>
+			</repositories>
+			<dependencies>
+				<dependency>
+					<groupId>com.github.jbellis</groupId>
+					<artifactId>jamm</artifactId>
+					<version>0.3.3</version>
+				</dependency>
+				<dependency>
+					<groupId>info.picocli</groupId>
+					<artifactId>picocli</artifactId>
+					<version>4.6.1</version>
+				</dependency>
+				<dependency>
+					<groupId>org.jline</groupId>
+					<artifactId>jline</artifactId>
+					<version>${jline.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.jline</groupId>
+					<artifactId>jline-terminal</artifactId>
+					<version>${jline.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.jline</groupId>
+					<artifactId>jline-reader</artifactId>
+					<version>${jline.version}</version>
+				</dependency>
+			</dependencies>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-assembly-plugin</artifactId>
+						<version>3.3.0</version>
+						<configuration>
+							<descriptorRefs>
+								<descriptorRef>jar-with-dependencies</descriptorRef>
+							</descriptorRefs>
+							<archive>
+								<manifest>
+									<mainClass>net.alagris.cli.CLI</mainClass>
+								</manifest>
+							</archive>
+						</configuration>
+						<executions>
+							<execution>
+								<id>assemble-all</id>
+								<phase>package</phase>
+								<goals>
+									<goal>single</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+
+
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 	<name>SolomonoffLib</name>
 	<description>Transducer regular expression compiler</description>
 	<developers>
@@ -26,11 +121,6 @@
 		</developer>
 	</developers>
 	<dependencies>
-		<dependency>
-			<groupId>jline</groupId>
-			<artifactId>jline</artifactId>
-			<version>2.14.2</version>
-		</dependency>
 		<dependency>
 			<groupId>org.junit.platform</groupId>
 			<artifactId>junit-platform-commons</artifactId>
