--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,16 @@
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>3.0.0-M5</version>
+						<configuration>
+							<excludes>
+								<exclude>**/net/alagris/cli/*.java</exclude>
+							</excludes>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-compiler-plugin</artifactId>
 						<version>2.3.2</version>
 						<configuration>
@@ -77,6 +87,11 @@
 					<artifactId>jline-reader</artifactId>
 					<version>${jline.version}</version>
 				</dependency>
+				<dependency>
+					<groupId>org.jgrapht</groupId>
+					<artifactId>jgrapht-core</artifactId>
+					<version>1.4.0</version>
+				</dependency>
 			</dependencies>
 			<build>
 				<plugins>
@@ -107,8 +122,6 @@
 							</execution>
 						</executions>
 					</plugin>
-
-
 				</plugins>
 			</build>
 		</profile>
