--- a/native/cli/Cargo.toml
+++ b/native/cli/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2018"
 
 [dependencies]
 compiler = { path = "../compiler" }
-linefeed = "0.6.0"
+rustyline = "8.2.0"
+clap = "3.0.0-beta.2"
