--- a/native/cli/Cargo.toml
+++ b/native/cli/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "cli"
+name = "solomonoff-cli"
 version = "0.1.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-compiler = { path = "../compiler" }
+solomonoff-lib = { path = "../compiler" }
 rustyline = "8.2.0"
 clap = "3.0.0-beta.2"
