--- a/native/compiler/Cargo.toml
+++ b/native/compiler/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "compiler"
+name = "solomonoff-lib"
 version = "0.1.0"
 authors = ["Alagris <alagris12358@gmail.com>"]
 
@@ -12,5 +12,6 @@ lalrpop = "0.19.4"
 lalrpop-util = "0.19.5"
 regex = "1"
 nonmax = "0.5.0"
+wasm-timer = "0.2.5" # <-- this one is only really used when with --target web
 
 [profile.release]
